--- a/style.css
+++ b/style.css
@@ -58,14 +58,14 @@ a{
 }
 .box img{
     border-radius: 10px;
-    width: 400px;
-    height: 500px;
+    width: 90%;
+    height: 60%;
     padding-top: 30px;
     padding-left: 10px;
 }
 .box{
-    width: 800px;
-    height: 800px;
+    width: 80%;
+    height: 90%;
     margin-right: 4%;
     margin-left: 4%;
     padding-left: 30px;
